--- a/application/.env
+++ b/application/.env
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=Airlab
 APP_ENV=local
-APP_KEY=base64:Pnt+7n5LBjLKFZHD8zTG9CZzzQo04lu2bILfKqn5mL0=
+APP_KEY=base64:w7dlW5Z0pej0OAXUWFs4uUURN2mVYtOCMqLKyK5GYtk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=sql7.freemysqlhosting.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sql7288569
-DB_USERNAME=sql7288569
-DB_PASSWORD=xkX2tCaYub
+DB_DATABASE=airlab
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -38,4 +38,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-JWT_SECRET=vU3mHk0rtpZ0k1sYfLoTgG1xwdQExLhg
+JWT_SECRET=BOpfVHEW7g8HFeG5sBOePMWUSjGGF9TX
