added .env to gitignore

--- a/application/.env
+++ b/application/.env
@@ -2,7 +2,7 @@ APP_NAME=Airlab
 APP_ENV=local
 APP_KEY=base64:w7dlW5Z0pej0OAXUWFs4uUURN2mVYtOCMqLKyK5GYtk=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
